fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body {
     font-family: "Roboto Light", sans-serif;
     font-weight: lighter;
+    overflow-x:hidden;
 }
 .nav-bar {
     display: flex;
